[tool.poetry]
name = "utils"
version = "0.1.0"
description = "A set of utilities for daily hacking"
authors = ["M. Choji <mchoji@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
